--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.9
   flutter_oss_licenses: ^3.0.2
+  permission_handler: 
 
 flutter:
   uses-material-design: true
