--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.3
+  google_sign_in: ^5.0.7
+  googleapis: ^10.0.0
+  googleapis_auth: ^1.1.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
