Feat: ios 구글 드라이브 기능 구현 중

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -18,7 +18,7 @@
 			<dict>
 					<key>CFBundleURLSchemes</key>
 					<array>
-							<string>764272077871-4vpn0dd7e9tarlcjfgqo0p18vsa47jbt.apps.googleusercontent.com</string>
+							<string>764272077871-4vpn0dd7e9tarlcjfgqo0p18vsa47jbt</string>
 					</array>
 			</dict>
 	</array>
